docker/k8s/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: dev1
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 2
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullPolicy: Always
      containers:
      - name: auth
        image: sf90registry.azurecr.io/services/auth:CONTAINERVERSION
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
