docker/k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:

  type: NodePort
  selector:
    app: auth
  ports:
  - port: 80
    targetPort: 8000
