docker/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-svc-ingress
  labels:
    name: auth-svc-ingress
spec:
  rules:
    - host: auth-svc-ingress.071cb17d455f4048917f.eastus2.aksapp.io
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            serviceName: auth-svc
            port: http
